--- a/src/features/mainPage/userPage/userStatistic/responsiveTable.css
+++ b/src/features/mainPage/userPage/userStatistic/responsiveTable.css
@@ -99,6 +99,11 @@
         text-align: center;
     }
 
+    .stateTable :nth-child(1n+3) {
+        text-align: center;
+        padding: 0;
+    }
+
     .statisticMain {
         width: 100%;
     }
