--- a/src/features/mainPage/FAQ/faq.css
+++ b/src/features/mainPage/FAQ/faq.css
@@ -1,14 +1,15 @@
 .faq {
     width: 1524px;
-    height: 681px;
+    height: fit-content;
     margin: 66px auto 0;
     display: flex;
     flex-direction: column;
     gap: 20px;
     cursor: context-menu;
+    padding-bottom: 20px;
 }
 
-.faq div {
+.faq div:nth-child(1) {
     width: 1524px;
     height: 111px;
     background: #FFFFFF;
@@ -39,7 +40,7 @@
     font-size: 24px;
     font-weight: 600;
     color: #282828;
-    opacity: 0.8;
+    cursor: pointer;
 }
 
 .faqP button {
@@ -49,4 +50,28 @@
     outline: none;
     background: transparent;
     cursor: pointer;
+}
+
+.faqnotifyDiv {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.faqNot {
+    width: 100%;
+    padding: 23px 44px 33px 44px;
+    background: #FFFFFF;
+    border-radius: 10px;
+    transition: 5s;
+}   
+
+.faqNotP {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 0.06em;
+    color: #000000;
+    opacity: 0.8;
+    margin-top: 20px;
 }
