--- a/src/features/mainPage/FAQ/responsive.css
+++ b/src/features/mainPage/FAQ/responsive.css
@@ -7,7 +7,7 @@
         width: 95%;
     }
 
-    .faq div {
+    .faq div:nth-child(1) {
         width: 100%;
     }
 
@@ -23,7 +23,7 @@
         z-index: 1 !important;
     }
 
-    .faq div {
+    .faq div:nth-child(1) {
         z-index: 1 !important;
     }
 }
@@ -33,10 +33,9 @@
     .faq {
         margin: 25px auto 0;
         width: 95%;
-        height: 832px;
     }
 
-    .faq div {
+    .faq div:nth-child(1) {
         width: 345px;
         height: 64px;
         padding: 11px 10px 12px;
@@ -55,9 +54,25 @@
         font-weight: 600;
         margin: 0 auto;
     }
+
+    .faqNot {
+        width: 345px;
+        margin: 0 auto;
+    }
+
+    .faqNotP {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: 0.06em;
+    }
+
+    .faqNotH3 {
+        font-size: 16px;
+    }
 }
 
-@media (max-width:375px) {
+@media (max-width:374px) {
     .faq {
         width: 95%;
         height: 832px;
@@ -65,7 +80,7 @@
 
     }
 
-    .faq div {
+    .faq div:nth-child(1) {
         width: 100%;
     }
 
