--- a/src/features/mainPage/userPage/messigePerson/messigePerson.css
+++ b/src/features/mainPage/userPage/messigePerson/messigePerson.css
@@ -64,4 +64,17 @@
     font-weight: 600;
 }
 
+.deleteIconMessige {
+    position: absolute;
+    right: 32px;
+    top: 125px;
+    background-image: url("/src/images/trash-alt.svg");
+    background-size: 20px 20px;
+    width: 20px;
+    height: 20px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
 
