--- a/src/features/mainPage/userPage/messigePerson/responsiveMessige.css
+++ b/src/features/mainPage/userPage/messigePerson/responsiveMessige.css
@@ -14,6 +14,11 @@
 
 @media (max-width:600px) {
 
+    .deleteIconMessige {
+        right: 11px;
+        top: 82px;
+    }
+
     .personDescription a {
         font-size: 12px;
     }
