--- a/src/features/mainPage/userPage/userStatistic/statisticMain.css
+++ b/src/features/mainPage/userPage/userStatistic/statisticMain.css
@@ -305,13 +305,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 16px;
+    margin-top: 16px !important; 
+    margin: 0 auto;
 }
 
-.footerTable button{
-    width: 4.5px;
+.buttonSlack {
+    width: 26px;
+    height: 26px;
     height: 9px;
-    margin: 0 21px;
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -321,15 +322,16 @@
     border: none;
 }   
 
-.footerTable button img {
-    width: 100%;
-    height: 100%;
-}
+.footerTable > button img{
+    width: 4.5px;
+}   
 
 .linkP {
-    width: 128px;
+    /* position: relative; */
+    width: 82px;
+    overflow: hidden;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -347,10 +349,45 @@
     color: #28282894;
 }
 
-.activeBalance {
-    background: #2A29B4;
-    color: white !important;
+.innerLinkP {
+    position: relative;
+    left: 0;
+    display: flex;
+    width: fit-content;
+    transition: 1s;
 }
+
+.activeBalance {
+    width: 26px;
+    height: 26px;
+    color: white;
+    background: #2A29B4 !important;
+    border-radius: 3px;
+}
+
+.butPagination {
+    width: 26px;
+    height: 26px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 16px;
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.dots {
+    width: 26px;
+    height: 26px;
+    display: flex;
+    align-items: flex-end;
+    margin: 0 3px;
+}
+
+
 
 .pTag {
     display: inline-block;
