--- a/src/features/mainPage/userPage/Tarif/tarif.css
+++ b/src/features/mainPage/userPage/Tarif/tarif.css
@@ -1,10 +1,11 @@
 .tarifMain {
     max-width: 900px;
     width: 100%;
+    margin-bottom: 100px;
 }
 
 .tarifHeader {
-    width: 900px;
+    width: 100%;
     height: 103px;
     background: #FFFFFF;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
@@ -28,6 +29,7 @@
 
 .secondTarifDiv {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -37,6 +39,7 @@
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
     border-radius: 20px;
     padding: 30px 40px;
+    margin-bottom: 20px;
 }
 
 .countryname {
@@ -182,6 +185,11 @@ input[type="radio"]:checked + .check {
     color: white;
 }
 
+@media screen and (max-width:1024px) {
+    .secondTarifDiv {
+        justify-content: space-around;
+    }
+}
 
 @media screen and (max-width:900px){
     .thankYou {
@@ -189,9 +197,7 @@ input[type="radio"]:checked + .check {
     }
 }
 
-
-
-@media screen and (max-width:900px){
+@media screen and (max-width:600px){
     .thankYou {
         width: 345px;
         height: 201px;
@@ -216,5 +222,52 @@ input[type="radio"]:checked + .check {
         border-radius: 3.43657px;
         font-weight: 600;
         font-size: 10.997px;
+    }
+
+    .tarifHeader {
+        width: 345px;
+        padding: 11px;
+        height: 75px;
+        font-weight: bold;
+        font-size: 18px;
+    }
+
+    .miniDiv {
+        width: 345px;
+        height: 324px;
+        padding: 30px 27px;
+    }
+
+    .countryname {
+        font-size: 20px;
+        margin-bottom: 14px;
+    }
+
+    .descriptionTarif {
+        font-weight: normal;
+        font-size: 14px;
+    }
+
+    .month {
+        font-weight: 600;
+        font-size: 16px;
+    }
+
+    .sendTArif {
+        width: 290px;
+        height: 54px;
+        border-radius: 10px;
+        font-weight: 600;
+        font-size: 18px;
+        margin-top: 15px;
+    }
+
+    .trifInnerHeader {
+        font-weight: bold;
+        font-size: 18px;
+    }
+
+    .socialSiteIcon {
+        width: 80%;
     }
 }
