--- a/src/features/mainPage/contactUs/contactUs.css
+++ b/src/features/mainPage/contactUs/contactUs.css
@@ -235,6 +235,7 @@
     gap: 28px;
     align-items: center;
     position: relative;
+    padding-top: 80px;
 }
 
 .Letter {
@@ -245,7 +246,6 @@
     background-repeat: no-repeat;
     background-position: center;
     /* background: transparent; */
-
 }
 
 .textGood {
