--- a/src/features/mainPage/contactUs/responsive.css
+++ b/src/features/mainPage/contactUs/responsive.css
@@ -220,8 +220,10 @@
     }
 
     .LetterChild {
+        padding-top: 37px;
         width: 345px;
         height: 175.55px;
+        gap: 12px;
     }
 
     .closeReceiveLetter {
@@ -231,15 +233,15 @@
     }
 
     .Letter {
-        width: 77.97px;
-        height: 74.92px;
+        width: 77.97px !important;
+        height: 74.92px !important;
         background-size: contain;
-        margin-top: 37px;
     }
 
     .textGood {
-        font-weight: 600;
-        font-size: 17.4242px;
+        font-weight: 600 !important;
+        font-size: 17.4242px !important;
+        margin-top: 0 !important;
     }
 }
 
