--- a/src/features/mainPage/userPage/forgetPassword/forget.css
+++ b/src/features/mainPage/userPage/forgetPassword/forget.css
@@ -87,7 +87,7 @@
     font-weight: bold;
     font-size: 30px;
     color: #282828;
-    margin-top: 34px !important;
+    margin-top: 34px;
     text-align: center;
     max-width: 450px;
     margin: 0 auto;
@@ -123,6 +123,7 @@
     .forget {
         padding: 0 15px;
     }
+
     .formForget {
         padding: 35px 24px;
         height: 238px;
