--- a/src/features/mainPage/main/main.css
+++ b/src/features/mainPage/main/main.css
@@ -17,7 +17,7 @@
 .registerDiv {
     width: 653px;
     height: 573px;
-    margin: 130px 209px 0 47px;
+    margin: 156px 209px 0 47px;
     z-index: 2;
 }
 
@@ -115,7 +115,7 @@
     align-items: center;
 }
 
-.animation {
+/* .animation {
     animation-name: name;
     animation-duration: 0.3s;
 }
@@ -132,6 +132,6 @@
     100% {
         opacity: 1;
     }
-}
+} */
 
 
