--- a/src/features/mainPage/mainPage.css
+++ b/src/features/mainPage/mainPage.css
@@ -1,6 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400&display=swap');
+@font-face {
+    font-family: "Montserrat-Bold";
+    src: url("/public/font/Montserrat-Bold.ttf");
+ 
+}
+
+@font-face {
+    font-family: "Montserrat-Regular";
+    src: url("/public/font/Montserrat-Regular.ttf");
+}
+
+
 * {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat-Regular' !important;
 }
 
 .MainPage {
