--- a/src/features/mainPage/about/responsive.css
+++ b/src/features/mainPage/about/responsive.css
@@ -25,9 +25,9 @@
         margin-bottom: 15px;
     }
 
-    .about p {
+    /* .about p {
         height: fit-content;
-    }
+    } */
 }
 
 @media screen and (max-width:375px) {
