--- a/src/features/mainPage/main/main.css
+++ b/src/features/mainPage/main/main.css
@@ -6,6 +6,21 @@
     position: relative;
 }
 
+.loading {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.loading > img {
+    width: 100%;
+    height: 100%;
+}
+
 .mainImgDiv {
     width: 872px;
     height: 543px;
