--- a/src/features/mainPage/userPage/Tarif/tarif.css
+++ b/src/features/mainPage/userPage/Tarif/tarif.css
@@ -95,6 +95,7 @@ input[type="radio"]:checked + .check {
     font-weight: normal;
     font-size: 14px;
     color: #282828;
+    min-height: 132px;
 }
 
 .sendTArif {
