--- a/src/features/mainPage/registerPage/register.css
+++ b/src/features/mainPage/registerPage/register.css
@@ -80,6 +80,21 @@
     flex-direction: column;
 }
 
+.formRegistration > label {
+    position: relative;
+}
+
+.refusedMessage {
+    position: absolute;
+    font-weight: 400;
+    font-size: 15px;
+    color: red;
+    z-index: 10;
+    left: 0;
+    top: 72px;
+    font-weight: 900;
+}
+
 .formRegistration input {
     width: 100%;
     height: 70px;
@@ -151,7 +166,7 @@
     font-size: 18px;
     font-weight: 500;
     color:#282828;
-    cursor: pointer;
+    /* cursor: pointer; */
     Opacity: 71%
 }
 
