--- a/src/features/mainPage/userPage/Tarif/tarif.css
+++ b/src/features/mainPage/userPage/Tarif/tarif.css
@@ -30,7 +30,8 @@
 .secondTarifDiv {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 12px;
+    /* justify-content: space-between; */
 }
 
 .miniDiv {
@@ -226,7 +227,7 @@ input[type="radio"]:checked + .check {
     }
 
     .tarifHeader {
-        width: 345px;
+        /* width: 345px; */
         padding: 11px;
         height: 75px;
         font-weight: bold;
@@ -235,7 +236,7 @@ input[type="radio"]:checked + .check {
 
     .miniDiv {
         width: 345px;
-        height: 324px;
+        /* height: 324px; */
         padding: 30px 27px;
     }
 
