--- a/src/app/AuntContainer.css
+++ b/src/app/AuntContainer.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 1080px !important;
   position: absolute;
   top: 0;
   left: 0;
