--- a/src/features/mainPage/userPage/user/responsive.css
+++ b/src/features/mainPage/userPage/user/responsive.css
@@ -53,6 +53,7 @@
         width: 345px;
         height: 81px;
         margin: 45px auto 0 ;
+        display: none;
     }
 
     .UserPersonImg p {
