--- a/src/features/mainPage/userPage/user/responsive.css
+++ b/src/features/mainPage/userPage/user/responsive.css
@@ -37,6 +37,9 @@
 
 
 @media (max-width:600px) {
+    .mailInput {
+        
+    }
     .labelForFileReader {
         width: 246px;
         height: 55px;
