--- a/src/features/mainPage/registerPage/register.css
+++ b/src/features/mainPage/registerPage/register.css
@@ -244,3 +244,10 @@
 .colorErrorError {
     color: red;
 }
+
+@media screen and (max-width:500px) {
+    .regRefus {
+        font-size: 8px !important;
+        top: 55px !important;
+    }
+}
