--- a/src/features/mainPage/userPage/header/responsive.css
+++ b/src/features/mainPage/userPage/header/responsive.css
@@ -100,6 +100,10 @@
 }
 
 @media (max-width:350px) {
+    .statisticMain {
+        padding-bottom: 150px;
+    }
+
     .iconDiv p {
         width: 30px;
     }
