--- a/src/features/mainPage/userPage/user/responsiveAnimationUser.css
+++ b/src/features/mainPage/userPage/user/responsiveAnimationUser.css
@@ -60,13 +60,17 @@
     .animationTimer {
         display: none;
     }
+    
     .personName {
         animation: unset;
         border-radius: 5px;
     }
+
     .PersonUser {
+        height: fit-content;
         animation: unset;
     }
+
     .UserPersonImg {
         border-radius: 5px;
         animation: unset;
