--- a/src/features/mainPage/userPage/userPlayChannel/responsivePlayChannel.css
+++ b/src/features/mainPage/userPage/userPlayChannel/responsivePlayChannel.css
@@ -87,9 +87,9 @@
         gap: 12px;
         height: fit-content;
     }
-    .MainPage {
+    /* .MainPage {
         height: fit-content;
-    }
+    } */
 
     .firstThreepageDiv {
         width: 100%;
