--- a/src/app/AuntContainer.css
+++ b/src/app/AuntContainer.css
@@ -18,13 +18,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 1080px !important;
+  height: 100vh ;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 8;
   background: radial-gradient(#b1b1ff81 0%,#E3E2FF 100%);
 }
+
 
 .loading > img {
   height: fit-content;
