--- a/src/features/mainPage/main/main.css
+++ b/src/features/mainPage/main/main.css
@@ -113,6 +113,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: radial-gradient(#B1B1FF 0%,#E3E2FF 100%);
+
 }
 
 /* .animation {
