--- a/src/features/mainPage/main/responsiveMain.css
+++ b/src/features/mainPage/main/responsiveMain.css
@@ -73,6 +73,7 @@
     }
 
     .TvchannelDiv {
+        justify-content: space-evenly;
         position: unset;
         height: fit-content;
         padding: 32px 0 50px 0 ;
@@ -94,10 +95,10 @@
     .registerDiv {
         height: fit-content;
     }
-
+/* 
     .MainPage {
         height: fit-content;
-    }
+    } */
 }
 
 @media (max-width:600px) {
@@ -110,6 +111,7 @@
         flex-direction: column;
         align-items: center;
         gap: 15px;
+        background: radial-gradient(#B1B1FF 0%,#E3E2FF 100%);
     }
 
     .Navlink {
@@ -125,7 +127,7 @@
     .TvchannelDiv {
         justify-content: space-evenly;
         position: unset;
-        width: 341px;
+        width: 100%;
     }
 
     .TvchannelDiv img:nth-child(1) {
