--- a/src/features/mainPage/signInPage/signIn.css
+++ b/src/features/mainPage/signInPage/signIn.css
@@ -237,3 +237,9 @@
     outline: 3px solid red !important;
 }
 
+@media screen and (max-width:375px) {
+    .refusedMessage {
+        /* font-size: 15px !important ; */
+        top: 56px !important ;
+    }
+}
