--- a/src/features/mainPage/userPage/statisticPortal/statisticPortal.css
+++ b/src/features/mainPage/userPage/statisticPortal/statisticPortal.css
@@ -1,7 +1,7 @@
 .statisticPortal {
     height: 672px;
     width: 1010px;
-    display: flex;
+    display: none;
     flex-direction: column;
 }
 
