--- a/src/features/mainPage/userPage/userHome/userHome.css
+++ b/src/features/mainPage/userPage/userHome/userHome.css
@@ -153,10 +153,10 @@
     height: 171px;
     border-radius: 20px;
     background: #FFFFFF;
-    padding-top: 29px;
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
 #timerDiv1 {
@@ -189,6 +189,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    display: none !important;
 }
 
 .timering {
@@ -198,21 +199,21 @@
     width: 293px;
     height: 150px;
     transform: rotate(-87deg);
+    display: none !important;
 }
 
 .timerButtonDiv {
-    width: 220px;
-    height: 113px;
+    width: 300px;
+    height: fit-content;
     display: flex;
     flex-direction: column;
-    margin-right: 51px;
 } 
 
 .date {
     margin:  11px 0;
     columns: #282828;
     opacity: 0.7;
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 500;
 }
 
@@ -223,7 +224,7 @@
 }
 
 .timerButton {
-    width: 220px;
+    width: 100%;
     height: 47px;
     background: #EEBA06;
     display: flex;
@@ -349,7 +350,9 @@
     background: #EEBA06 !important;
 }
 
+
 .mainChannelGroup {
+    /* overflow-y: scroll; */
     width: 488px;
     height: 441px;
     background: #FFFFFF;
@@ -384,40 +387,35 @@
 }
 
 .channelGroupChecked {
-    height: 291px;
+    overflow-y: scroll;
+    height: 330px;
     width: 373px;
     margin: 35px  auto 0;
     display: flex;
     justify-content: space-between;
 }
 
-.groupinput {
-    display: flex;
-    flex-direction: column;
+.channelGroupChecked::-webkit-scrollbar-thumb, .channelGroupChecked::-webkit-scrollbar {
+    display: none;
 }
 
-.groupinput label {
+.groupinput {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.groupinput p {
     font-size: 16px;
     color: #282828;
     opacity: 0.7;
-    margin-bottom: 25px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
+    width: 50%;
+    padding-bottom: 25px;
 }
 
-.groupinput:nth-child(1) {
-    width: 198px;
-    border-right: 1px solid #2828281f;
-}
-
-.groupinput label input {
-    margin-right: 20px;
-    width: 17px;
-    height: 17px;
-    border-radius: 10px;
-    cursor: pointer;
-    display: none;
+.groupinput p:nth-child(even) {
+    text-align: end;
+    border-left: 1px solid #282828;
 }
 
 .user {
@@ -433,6 +431,18 @@
     animation-duration: 1s;
 }
 
+.imgXtream {
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+    transform: scale(1);
+}
+
+.spanXtream {
+    display: inline-block;
+    width: 80px;
+    height: 28px;
+}
 @keyframes user {
     0% {
         position: relative;
@@ -592,13 +602,20 @@
 }
 
 .TvChannels {
-    width: 373px;
+    overflow-y: scroll;
     height: 574px;
     margin-top: 54px;
-    margin-left: 70px;
+    margin-right: 30px;
+    margin-left: 30px;
     display: flex;
     justify-content: space-between;
     animation-duration: 1s;
+    flex-wrap: wrap;
+    row-gap: 25px;
+}
+
+.TvChannels::-webkit-scrollbar-thumb, .TvChannels::-webkit-scrollbar {
+    display: none;
 }
 
 @keyframes tvChennels {
