--- a/src/features/mainPage/signInPage/signIn.css
+++ b/src/features/mainPage/signInPage/signIn.css
@@ -200,6 +200,7 @@
     justify-content: space-between;
     width: 387px;
     height: 78px;
+    display: none !important;
 }
 
 .signInSocialMediaIcon p {
