--- a/src/features/mainPage/userPage/userHome/responsiveHome.css
+++ b/src/features/mainPage/userPage/userHome/responsiveHome.css
@@ -138,10 +138,10 @@
         top: -4px;
         left: 5px;
     }
-
+/* 
     #timerDiv1 {
         justify-content: end !important;
-    }
+    } */
 
     .userHome {
         width: 90%;
