--- a/src/features/mainPage/about/responsive.css
+++ b/src/features/mainPage/about/responsive.css
@@ -38,7 +38,7 @@
         padding: 10px 12px ;
     }
 
-    .about h2 {
+    .about .h2 {
         max-width: 325px;
         height: 41px;
         font-size: 18px;
