--- a/src/features/mainPage/registerPage/register.css
+++ b/src/features/mainPage/registerPage/register.css
@@ -208,6 +208,7 @@
     justify-content: space-between;
     width: 387px;
     height: 78px;
+    display: none !important;
 }
 
 .socialMediaIcon p {
